# benchi

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: test.toml  test_2.files  test_2.toml
rsc/: conf_1  conf_2
rsc/real/: benchs  conf
src/: clap.rs  common.rs  consts.rs  errors.rs  lib.rs  load.rs  loading.rs  main.rs  parse.rs
src/common/: inspect.rs  instance.rs  mod.rs  plot.rs  res.rs  run.rs  tool.rs  validator.rs
src/inspect/: mod.rs
src/load/: mod.rs  res.rs  run.rs
src/plot/: compare.rs  cumul.rs  mod.rs
src/run/: mod.rs  para.rs  utils.rs
