[package]
name = "benchi"
version = "0.2.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]

[dependencies]
lazy_static = "*"
rayon = "*"
chrono = "*"
clap = "*"
ansi_term = "*"
pbr = "*"
regex = "*"
error-chain = "*"
serde = "*"
serde_derive = "*"
toml = "*"
wait-timeout = "*"
mylib = { git = "https://github.com/AdrienChampion/mylib" }
