[package]
name = "benchi"
version = "0.9.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
description = "A careful benchmarking tool for research-paper-ready plots."
homepage = "https://github.com/AdrienChampion/benchi"
repository = "https://github.com/AdrienChampion/benchi"
readme = "README.md"
categories = ["science"]
keywords = ["benchmarking", "plotting"]
license = "MIT"

[[bin]]
name = "benchi"
path = "src/main.rs"
doc = false

[lib]
name = "benchi"
path = "src/lib.rs"

[dependencies]
lazy_static = "*"
rayon = "*"
chrono = "*"
clap = "*"
ansi_term = "*"
pbr = "*"
regex = "*"
error-chain = "*"
serde = "*"
serde_derive = "*"
toml = "*"
wait-timeout = "*"
isatty = "*"
mylib = { git = "https://github.com/AdrienChampion/mylib" }
