[package]
name = "benchi"
version = "0.2.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
edition = "2018"

[dependencies]
rayon = "*"
chrono = "*"
clap_lib = { package = "clap", version = "*", features = ["cargo"] }
ansi_term = "*"
pbr = "*"
regex = "*"
error-chain = "*"
lazy_static = "*"

[dependencies.nom]
version = "^3.0"
features = [ "regex", "regexp" ]
